--- a/authenticationPOC/rest-auth-ionic/www/app/Login/login.html
+++ b/authenticationPOC/rest-auth-ionic/www/app/Login/login.html
@@ -1,4 +1,4 @@
-<ion-view title="Create a new account">
+<ion-view title="Please sign in">
   <ion-content class="padding">
     <div class="list">
       <label class="item item-input">
@@ -8,8 +8,8 @@
         <input type="password" placeholder="Password" ng-model="user.password">
       </label>
     </div>
-    <button class="button button-full button-positive" ng-click="signup()">
-      Sign up
+    <button class="button button-full button-balanced" ng-click="login()">
+      Login
     </button>
   </ion-content>
 </ion-view>
