Fixed problem displaying text

--- a/App/www/app/Form/Forms.html
+++ b/App/www/app/Form/Forms.html
@@ -1,6 +1,4 @@
-<ion-nav-bar>
-</ion-nav-bar>
-<ion-view title="Patient Forms">
+<ion-view>
   <ion-content class="padding">
     <div>
        Form List will go here.
