--- a/App/www/app/Confirmation/confirmation.html
+++ b/App/www/app/Confirmation/confirmation.html
@@ -1,10 +1,13 @@
 <ion-view>
-	<ion-content class="padding">
+	<div class="bar bar-header bar-positive">
+	</div>
+	<ion-content class="has-header" start-y="50">
 		<div align="center">
         	Thank you!
     	</div>
     	<div align="center">
         	Your form was submitted successfully.
     	</div>
+    	<div class="row">
 	</ion-content>
 </ion-view>
