Changing text sizes in confirmation.html

--- a/App/www/app/Confirmation/confirmation.html
+++ b/App/www/app/Confirmation/confirmation.html
@@ -1,13 +1,13 @@
 <ion-view>
-	<div class="bar bar-header bar-positive">
-	</div>
-	<ion-content class="has-header" start-y="50">
-		<div align="center">
-        	Thank you!
-    	</div>
-    	<div align="center">
-        	Your form was submitted successfully.
-    	</div>
-    	<div class="row">
-	</ion-content>
+    <div class="bar bar-header bar-positive">
+    </div>
+    <ion-content class="has-header" start-y="50">
+        <div align="center">
+            <h1>Thank you!</h1>
+        </div>
+        <div align="center">
+            <h3>Your form was submitted successfully.</h3>
+        </div>
+        <div class="row">
+    </ion-content>
 </ion-view>
