updated login and html for endpoint

--- a/App/www/app/Login/login.html
+++ b/App/www/app/Login/login.html
@@ -5,12 +5,12 @@
     <div>
       <md-input-container>
         <label>Name</label>
-        <input ng-model="user.name">
+        <input ng-model="user.Username">
       </md-input-container>
 
       <md-input-container>
         <label>Password</label>
-        <input ng-model="user.password">
+        <input ng-model="user.Password">
       </md-input-container>
     </div>
 
