Added FormCtrl.js, the controller for the forms. Currently it has the option to get the questionnaire names and the next section in the questionnaire. Also added FormCtrl.js to index.html.

--- a/App/www/index.html
+++ b/App/www/index.html
@@ -41,6 +41,7 @@
 <script src="app/App/AppCtrl.js"></script>
 <script src="app/Login/LoginCtrl.js"></script>
 <!-- put Form Controller hurr -->
+<script src="app/Form/FormCtrl.js"></script>
 <script src="app/Login/services.js"></script>
 <script src="app/App/constants.js"></script>
 </head>
