--- a/App/www/app/Login/login.html
+++ b/App/www/app/Login/login.html
@@ -5,7 +5,7 @@
     <div>
       <md-input-container>
         <label>Name</label>
-        <input ng-model="user.Username">
+        <input ng-model="user.UserName">
       </md-input-container>
 
       <md-input-container>
