--- a/App/forms.html
+++ b/App/forms.html
@@ -8,7 +8,6 @@
 
   <ion-view>
 
-
   <div class="bar bar-header bar-positive" ng-controller="InsideCtrl">
       <h1 class="title">Patient Forms</h1>
       <button class="button" ng-click = "logout()">
@@ -52,7 +51,7 @@
                             <p>Selected Value: <span>{{ SurveyResponseAnswerText }}</span> </p>
 
                              <md-radio-group layout="row"  ng-model="SurveyResponseAnswerText" 
-                             class="md-primary" ng-change = "selectedAnswerChange({{answer.SurveyAnswerId}})">
+                             class="md-primary" ng-change = "selectedAnswerChange()">
                                 <md-radio-button ng-repeat="answers in q.Answers"
                                    ng-value="answers.SurveyAnswerLabel">
                                    {{answers.SurveyAnswerLabel}}<br/>
@@ -831,6 +830,3 @@
 
  
 </html>-->
-</div>
-</div>
-</html>
