add form services to html

--- a/App/www/index.html
+++ b/App/www/index.html
@@ -44,6 +44,7 @@
 <script src="app/Form/FormCtrl.js"></script>
 <script src="app/Login/services.js"></script>
 <script src="app/App/constants.js"></script>
+<script src="app/Form/services.js"></script>
 </head>
 
 <body ng-app="App" ng-controller="AppCtrl">
