--- a/App/www/app/Login/login.html
+++ b/App/www/app/Login/login.html
@@ -1,26 +1,8 @@
-<ion-view title="Please sign in">
-  <ion-content class="padding">
-
- <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding="">
-    <div>
-      <md-input-container>
-        <label>Name</label>
-        <input ng-model="user.UserName">
-      </md-input-container>
-
-      <md-input-container>
-        <label>Password</label>
-        <input ng-model="user.Password">
-      </md-input-container>
-    </div>
-
-    <md-button class="md-raised" ng-click="login()">Login</md-button>
-  </md-content>
-
-
-   
-  </ion-content>
-</ion-view>
-
+<form>
+  <h1>Please Login</h1>
+  <input placeholder="Name" ng-model="user.UserName" type="text" value="" required>
+  <input placeholder="Password" ng-model="user.Password" type="text" value="" required> 
+  <button ng-click="login()">Login</button>
+</form>
 
 
