--- a/App/www/app/Login/login.html
+++ b/App/www/app/Login/login.html
@@ -1,8 +1,9 @@
-<form>
+<div class="row responsive-md">
+  <div class="col"><form>
   <h1>Please Login</h1>
   <input placeholder="Name" ng-model="user.UserName" type="text" value="" required>
   <input placeholder="Password" ng-model="user.Password" type="text" value="" required> 
   <button ng-click="login()">Login</button>
-</form>
+</form></div>
 
 
