Changed CSS on sign out button, fixed some other forms css

--- a/App/www/app/Form/forms.html
+++ b/App/www/app/Form/forms.html
@@ -10,8 +10,8 @@
   <ion-view>
 
     <div class="bar bar-header bar-positive" ng-controller="InsideCtrl">
-      <h1 class="title">Patient Forms</h1>
-      <button class="button" ng-click="logout()">
+      <h1 class="form-title">Patient Forms</h1>
+      <button class="signout" ng-click="logout()">
         Sign Out
       </button>
     </div>
