--- a/App/www/app/Review/review.html
+++ b/App/www/app/Review/review.html
@@ -4,21 +4,29 @@
 
   
         <!-- <ul ng-repeat="question in QuestionnaireList"> -->
-          <li ng-repeat="section in sections">
+          <li ng-repeat="section in questionnaire.Questionnaire.Sections">
           	<md-list>
-                  <md-list-item class="secondary-button-padding">
-                    <p>{{section}}</p></md-list>
+              <md-list-item class="secondary-button-padding">
+                <p>{{section.SurveySectionName}}</p>
+                </md-list-item>
+              </md-list>
 
-                  <li ng-repeat="question in questions">
+              <ul ng-repeat="question in section.Questions">
           			<md-list>
                   <md-list-item class="secondary-button-padding">
-                    <p>{{question}}</p></md-list>
+                    <p>{{question.SurveyQuestionLabel}}</p>
+                    <p>{{question.SelectedAnswerText}}</p>
+                    </md-list-item>
+                </md-list>
 
-                        <li ng-repeat="answer in answers track by question.QuestionNumber">
-          			<md-list>
-                  <md-list-item class="secondary-button-padding">
-                    <p>ANSWERS HERE<p>{{answer}}</p></md-list>
-  
+                  <!-- <li ng-repeat="answer in question.Answers track by question.QuestionNumber">
+              			<md-list>
+                      <md-list-item class="secondary-button-padding">
+                        <p>ANSWERS HERE {{answer}}</p>
+                        </md-list-item>
+                      </md-list>
+                  </li> -->
+              </ul>
         </li>
     </div></div>
                 
