--- a/App/www/app/Login/login.html
+++ b/App/www/app/Login/login.html
@@ -3,7 +3,7 @@
   <h1>Please Login</h1>
   <input placeholder="Name" ng-model="user.UserName" type="text" value="" required>
   <input placeholder="Password" ng-model="user.Password" type="text" value="" required> 
-  <button ng-click="login()">Login</button>
+  <button class="login" ng-click="login()">Login</button>
 </form></div>
 
 
