--- a/App/www/app/Review/review.html
+++ b/App/www/app/Review/review.html
@@ -1,44 +1,44 @@
-<form>
-  <h1>Please review</h1><div class= "test"> 
-   <div ng-controller="ReviewCtrl">
 
+  <form>
+  <h1>Please review</h1>
 
+  <div ng-controller="ReviewCtrl">
+ </div>
 
-          <li ng-repeat="section in questionnaire.Questionnaire.Sections">
-            <md-list>
-              <md-list-item class="secondary-button-padding">
-                <p>{{section.SurveySectionName}}</p>
-                </md-list-item>
-              </md-list>
-
-
-
-      <md-content class="md-padding" layout-xs="row" layout="row">
-    <div flex-xs flex-gt-xs="100" layout="column">
-      <md-card>
-        <md-card-title>
-          <md-card-title-text>
-            <span class="md-subhead">Questions</span>
-              <ul ng-repeat="question in section.Questions">
-                <md-list>
-                  <md-list-item class="secondary-button-padding">
-                    <p>{{question.SurveyQuestionLabel}}</p>
-                    <p>{{question.SelectedAnswerText}}</p>
-                    </md-list-item>
-                </md-list>
-              </ul>
-            </li>
-          </md-card-title-text>
-        </md-card-title>
-        <md-card-actions layout="row" layout-align="end center">
-        </md-card-actions>
-      </md-card>
-</div>
+ <md-card ng-repeat="section in questionnaire.Questionnaire.Sections" class="card-1">
+             <span class="md-subhead"><h2>{{section.SurveySectionName}}</h2></span>
+             <div class="questions" ng-repeat="question in section.Questions">
+              <span>{{question.SurveyQuestionLabel}}</span><br>
+              <span>{{question.SelectedAnswerText}}</span>
+            </div>
+ </md-card>
 
    
-       
-  </div>
 </form>
 
  <button class="button button-rounded fab" >
 </button>
+
+
+
+<!-- 
+  <form>
+  <h1>Please review</h1>
+
+  <div ng-controller="ReviewCtrl">
+ </div>
+
+ <md-card ng-repeat="section in questionnaire.Questionnaire.Sections">
+             <md-card title-text>{{section.SurveySectionName}}</md-card-title-text>
+             <md-card title-text ng-repeat="question in section.Questions">
+              <span class="md-subhead">{{question.SurveyQuestionLabel}}</span>
+              <span class="md-subhead">{{question.SelectedAnswerText}}</span>
+      </md-card-title-text>
+      </md-card>
+
+   
+</form>
+
+ <button class="button button-rounded fab" >
+</button>
+-->
