--- a/App/www/app/Review/review.html
+++ b/App/www/app/Review/review.html
@@ -6,13 +6,32 @@
  </div>
   <div class= "review">
  <md-card ng-repeat="section in questionnaire.Questionnaire.Sections" class="card-1">
-             <span class="md-subhead"><h2>{{section.SurveySectionName}}</h2>  <md-button class="md-raised">Edit</md-button></span>
-             <div class="questions" ng-repeat="question in section.Questions">
-              <span>{{question.SurveyQuestionLabel}}</span><br>
-              <span>{{question.SelectedAnswerText}}</span>
-            </div>
- </md-card>
-
+ <!-- Amy added ng-click to trigger $scope.expand to determine which card to expand -->
+  <span class="md-subhead" ng-click="expand(section)"><h2>{{section.SurveySectionName}}</h2></span>
+   <!-- Amy added this div to determine if each section should be expanded or not -->
+   <div ng-show="isClicked(section)">
+    <!-- Amy added this div to hide the selected answers in a section if viewHidden = true -->
+    <div ng-hide="section.viewHidden">
+     <md-button class="md-raised" ng-click="edit(section)">Edit</md-button>
+     <div class="questions" ng-repeat="question in section.Questions">
+      <span>{{question.SurveyQuestionLabel}}</span><br>
+      <span>{{question.SelectedAnswerText}}</span>
+     </div>
+    </div>
+    <!-- Amy added this div to show all answer options (in edit mode) if edit = true -->
+    <div ng-show="section.edit">
+      <md-button class="md-raised" ng-click="saveEdits(section)">Save</md-button>
+      <div class="questions" ng-repeat="question in section.Questions">
+        <span>{{question.SurveyQuestionLabel}}</span><br>
+        <div class="answers" ng-repeat="answer in question.Answers">
+        <!-- TODO: apply all answertype stuff from form.html -->
+          <span>{{answer.SurveyAnswerLabel}}</span>
+        </div>
+     </div>
+    </div>
+   </div>
+  </md-card>
+ </div>
 
  <button class="button button-rounded fab" ><i class="material-icons">done_all</i>
 </button>
