--- a/App/www/app/Review/review.html
+++ b/App/www/app/Review/review.html
@@ -1,13 +1,14 @@
 
 
   <div class="reviewHeader">Please review</div>
+  <div ng-controller="ReviewCtrl">
+ </div>
  
- <button class="button button-rounded fab" ><i class="material-icons">done_all</i>
+ <button class="button button-rounded fab" ng-click="submit()"><i class="material-icons">done_all</i>
 </button>
 
 
-  <div ng-controller="ReviewCtrl">
- </div>
+  
 
  <md-card ng-repeat="section in questionnaire.Questionnaire.Sections" class="card-1">
  <!-- Amy added ng-click to trigger $scope.expand to determine which card to expand -->
